--- a/public/404.html
+++ b/public/404.html
@@ -4,7 +4,7 @@
   <title>The page you were looking for doesn't exist (404)</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
-  .rails-default-error-page {
+  .error-page-logistip {
     background-color: #EFEFEF;
     color: #2E2F30;
     text-align: center;
@@ -12,13 +12,13 @@
     margin: 0;
   }
 
-  .rails-default-error-page div.dialog {
+  .error-page-logistip div.dialog {
     width: 95%;
     max-width: 33em;
     margin: 4em auto 0;
   }
 
-  .rails-default-error-page div.dialog > div {
+  .error-page-logistip div.dialog > div {
     border: 1px solid #CCC;
     border-right-color: #999;
     border-left-color: #999;
@@ -31,13 +31,13 @@
     box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
   }
 
-  .rails-default-error-page h1 {
+  .error-page-logistip h1 {
     font-size: 100%;
     color: #730E15;
     line-height: 1.5em;
   }
 
-  .rails-default-error-page div.dialog > p {
+  .error-page-logistip div.dialog > p {
     margin: 0 0 1em;
     padding: 1em;
     background-color: #F7F7F7;
@@ -54,14 +54,14 @@
   </style>
 </head>
 
-<body class="rails-default-error-page">
+<body class="error-page-logistip">
   <!-- This file lives in public/404.html -->
   <div class="dialog">
     <div>
-      <h1>The page you were looking for doesn't exist.</h1>
-      <p>You may have mistyped the address or the page may have moved.</p>
+      <h1> Oupsi - Cette page est introuvable ! </h1>
+      <p> Peut &ecirc;tre est-elle dans l'entrep&ocirc;t ?</p>
     </div>
-    <p>If you are the application owner check the logs for more information.</p>
+    <p>Le saviez-vous ? N'h&eacute;sitez pas &agrave; nous alerter par mail &agrave; l'adresse <strong>contact@logistip.com</strong> pour que nous puissions la retrouver :) </p>
   </div>
 </body>
 </html>
