--- a/public/500.html
+++ b/public/500.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>We're sorry, but something went wrong (500)</title>
+  <title>Ça sent le sapin !</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
-  .rails-default-error-page {
+  .logistip-500-error {
     background-color: #EFEFEF;
     color: #2E2F30;
     text-align: center;
@@ -12,13 +12,13 @@
     margin: 0;
   }
 
-  .rails-default-error-page div.dialog {
+  .logistip-500-error div.dialog {
     width: 95%;
     max-width: 33em;
     margin: 4em auto 0;
   }
 
-  .rails-default-error-page div.dialog > div {
+  .logistip-500-error div.dialog > div {
     border: 1px solid #CCC;
     border-right-color: #999;
     border-left-color: #999;
@@ -31,13 +31,13 @@
     box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
   }
 
-  .rails-default-error-page h1 {
+  .logistip-500-error h1 {
     font-size: 100%;
     color: #730E15;
     line-height: 1.5em;
   }
 
-  .rails-default-error-page div.dialog > p {
+  .logistip-500-error div.dialog > p {
     margin: 0 0 1em;
     padding: 1em;
     background-color: #F7F7F7;
@@ -54,13 +54,13 @@
   </style>
 </head>
 
-<body class="rails-default-error-page">
+<body class="logistip-500-error">
   <!-- This file lives in public/500.html -->
   <div class="dialog">
     <div>
-      <h1>We're sorry, but something went wrong.</h1>
+      <h1>D&eacute;sol&eacute; - Houston ne r&eacute;pond plus ! </h1>
     </div>
-    <p>If you are the application owner check the logs for more information.</p>
+    <p>R&eacute;essayez dans quelques instants, s'il n'y as pas d'am&eacute;lioration contactez nous &agrave; l'adresse suivante : contact@logistip.com et nous reviendrons vers vous dans les plus brefs d&eacute;lais</p>
   </div>
 </body>
 </html>
